--- a/index.html
+++ b/index.html
@@ -137,9 +137,8 @@
     <label>Instansi:</label>
 <select name="entry.827454273" required>
   <option value="">-- Pilih Instansi --</option>
-  <option value="SDN Ranuwurung 1">SDN Ranuwurung 1</option>
-  <option value="SDN Ranuwurung 2">SDN Ranuwurung 2</option>
-  <option value="SDN Ranuwurung 3">SDN Ranuwurung 3</option>
+  <option value="SDN Ranuklindungan I Grati">SDN Ranuklindungan I Grati</option>
+  <option value="SDN Panditan I Lumbang">SDN Panditan I Lumbang</option>
 </select>
 
 <label>Shift (Masuk / Pulang):</label>
