--- a/index.html
+++ b/index.html
@@ -120,19 +120,14 @@
   <form action="https://docs.google.com/forms/d/e/1FAIpQLScJU8t9-lMZnx_-eLE1ZB1hphTy2S5neHKHioWNFG2xzFagYQ/formResponse"
         method="POST" target="hidden_iframe" onsubmit="return checkLocation();">
 
-    <label>Nama Pegawai:</label>
-    <select name="entry.821452381" required>
-      <option value="">-- Pilih Nama --</option>
-      <option value="Sutriono">Sutriono</option>
-      <option value="Sugeng Hidayat">Sugeng Hidayat</option>
-      <option value="Rety Fauziah">Rety Fauziah</option>
-      <option value="Komariah">Komariah</option>
-      <option value="Ummu Sholikhah">Ummu Sholikhah</option>
-      <option value="Endang Riswati">Endang Riswati</option>
-      <option value="Nia Wulandari">Nia Wulandari</option>
-      <option value="Wahyu Purwanto">Wahyu Purwanto</option>
-      <option value="Ulfiya Na'imi">Ulfiya Na'imi</option>
-    </select>
+   <label>Nama Pegawai:</label>
+<select name="entry.2020800717" required>
+  <option value="">-- Pilih Nama --</option>
+  <option value="SUSWANTIYAH">SUSWANTIYAH</option>
+  <option value="SUSANTI SETIANINGSIH">SUSANTI SETIANINGSIH</option>
+  <option value="Sugeng Hidayat">Sugeng Hidayat</option>
+</select>
+
 
     <label>Instansi:</label>
 <select name="entry.827454273" required>
