--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 </select>
 
 <label>Shift (Masuk / Pulang):</label>
-<select name="entry.SHIFT_ID" required>
+<select name="entry.1462273249" required>
   <option value="">-- Pilih Shift --</option>
   <option value="Masuk">Masuk</option>
   <option value="Pulang">Pulang</option>
